--- a/GPSWeb/index.html
+++ b/GPSWeb/index.html
@@ -13,18 +13,34 @@
   My Google map
 <div id="map"></div>
 <script>
+    var locations = [];
+    var lat = 52.00118637;
+    var lng = 4.36955022;
 
     function initMap() {
-
-        var Nottingham = {lat: 52.961034, lng: -1.158733};
-
         var map = new google.maps.Map(document.getElementById('map'), {
-            zoom: 10,
-            center: Nottingham
+          zoom: 17,
+          center: {lat: lat, lng: lng},
         });
+
+          locations = [
+            {lat: lat, lng: lng},
+            {lat: 52, lng: 4.37},
+          ]
+
+        var path = new google.maps.Polyline({
+          path: locations,
+          geodesic: true,
+          strokeColor: '#FF0000',
+          strokeOpacity: 1.0,
+          strokeWeight: 2
+        })
+        path.setMap(map);
     }
+
 </script>
-  <script async defer
+
+<script async defer
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDujaeWrLEEsvjjXTAXrACL0AjP9iAKQRk&callback=initMap">
 </script>
 </body>
