--- a/GPSWeb/index.html
+++ b/GPSWeb/index.html
@@ -26,14 +26,25 @@
           locations = [
             {lat: lat, lng: lng},
             {lat: 52, lng: 4.37},
+
           ]
 
+        var dot = new google.maps.Circle({
+          strokeColor: '#FF0000',
+          strokeOpacity: 0.8,
+          strokeWeight: 1,
+          fillColor: '#FF0000',
+          fillOpacity: 0.8,
+          map:map,
+          center: {lat: lat, lng: lng},
+          radius: 3
+        })
         var path = new google.maps.Polyline({
           path: locations,
           geodesic: true,
           strokeColor: '#FF0000',
           strokeOpacity: 1.0,
-          strokeWeight: 2
+          strokeWeight: 1
         })
         path.setMap(map);
     }
