--- a/GPSWeb/index.html
+++ b/GPSWeb/index.html
@@ -13,21 +13,101 @@
   My Google map
 <div id="map"></div>
 <script>
+    var i=0;
+    //var lat;
+    //var lng;
+    var lat = [52,52.1,52.1];
+    var lng = [4.1,4,4.3];
+    var center;
+    var loc = {};
     var locations = [];
-    var lat = 52.00118637;
-    var lng = 4.36955022;
 
     function initMap() {
+        center = {lat:lat[0], lng:lng[0]};
         var map = new google.maps.Map(document.getElementById('map'), {
-          zoom: 17,
-          center: {lat: lat, lng: lng},
-        });
-
-          locations = [
-            {lat: lat, lng: lng},
-            {lat: 52, lng: 4.37},
-
+        zoom: 7,
+        center: center,
+        styles: [
+            {elementType: 'geometry', stylers: [{color: '#242f3e'}]},
+            {elementType: 'labels.text.stroke', stylers: [{color: '#242f3e'}]},
+            {elementType: 'labels.text.fill', stylers: [{color: '#746855'}]},
+            {
+              featureType: 'administrative.locality',
+              elementType: 'labels.text.fill',
+              stylers: [{color: '#d59563'}]
+            },
+            {
+              featureType: 'poi',
+              elementType: 'labels.text.fill',
+              stylers: [{color: '#d59563'}]
+            },
+            {
+              featureType: 'poi.park',
+              elementType: 'geometry',
+              stylers: [{color: '#263c3f'}]
+            },
+            {
+              featureType: 'poi.park',
+              elementType: 'labels.text.fill',
+              stylers: [{color: '#6b9a76'}]
+            },
+            {
+              featureType: 'road',
+              elementType: 'geometry',
+              stylers: [{color: '#38414e'}]
+            },
+            {
+              featureType: 'road',
+              elementType: 'geometry.stroke',
+              stylers: [{color: '#212a37'}]
+            },
+            {
+              featureType: 'road',
+              elementType: 'labels.text.fill',
+              stylers: [{color: '#9ca5b3'}]
+            },
+            {
+              featureType: 'road.highway',
+              elementType: 'geometry',
+              stylers: [{color: '#746855'}]
+            },
+            {
+              featureType: 'road.highway',
+              elementType: 'geometry.stroke',
+              stylers: [{color: '#1f2835'}]
+            },
+            {
+              featureType: 'road.highway',
+              elementType: 'labels.text.fill',
+              stylers: [{color: '#f3d19c'}]
+            },
+            {
+              featureType: 'transit',
+              elementType: 'geometry',
+              stylers: [{color: '#2f3948'}]
+            },
+            {
+              featureType: 'transit.station',
+              elementType: 'labels.text.fill',
+              stylers: [{color: '#d59563'}]
+            },
+            {
+              featureType: 'water',
+              elementType: 'geometry',
+              stylers: [{color: '#17263c'}]
+            },
+            {
+              featureType: 'water',
+              elementType: 'labels.text.fill',
+              stylers: [{color: '#515c6d'}]
+            },
+            {
+              featureType: 'water',
+              elementType: 'labels.text.stroke',
+              stylers: [{color: '#17263c'}]
+            }
           ]
+        });
 
         var dot = new google.maps.Circle({
           strokeColor: '#FF0000',
@@ -36,9 +116,22 @@
           fillColor: '#FF0000',
           fillOpacity: 0.8,
           map:map,
-          center: {lat: lat, lng: lng},
-          radius: 3
+          center: center,
+          radius: 7
         })
+
+      locations.push(center);
+
+    function updatePosition(){
+
+        //lat = parseFloat(position.coords.latitude);
+        //lng = parseFloat(position.coords.longitude);
+        loc = {lat:lat[i],lng:lng[i]};
+        if (i<4){
+          locations.push(loc);
+          i=i+1;
+        }
+
         var path = new google.maps.Polyline({
           path: locations,
           geodesic: true,
@@ -48,11 +141,14 @@
         })
         path.setMap(map);
     }
+    setInterval(updatePosition,1000);
+  }
 
 </script>
 
-<script async defer
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDujaeWrLEEsvjjXTAXrACL0AjP9iAKQRk&callback=initMap">
-</script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDujaeWrLEEsvjjXTAXrACL0AjP9iAKQRk&libraries=drawing&callback=initMap"
+        async defer></script>
+
+
 </body>
 </html>
