New workoutApp folder

--- a/GPSWeb/index.html
+++ b/GPSWeb/index.html
@@ -16,8 +16,8 @@
     var i=0;
     //var lat;
     //var lng;
-    var lat = [52,52.1,52.1];
-    var lng = [4.1,4,4.3];
+    var lat = [];
+    var lng = [];
     var center;
     var loc = {};
     var locations = [];
