--- a/GPSWeb/index.html
+++ b/GPSWeb/index.html
@@ -16,8 +16,8 @@
     var i=0;
     //var lat;
     //var lng;
-    var lat = [];
-    var lng = [];
+    var lat = [52,52];
+    var lng = [2,2.1];
     var center;
     var loc = {};
     var locations = [];
@@ -25,7 +25,7 @@
     function initMap() {
         center = {lat:lat[0], lng:lng[0]};
         var map = new google.maps.Map(document.getElementById('map'), {
-        zoom: 7,
+        zoom:15,
         center: center,
         styles: [
             {elementType: 'geometry', stylers: [{color: '#242f3e'}]},
